force-app/main/default/objects/Scope3PcmtItem/fields/Match_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Confidence_Score__c</fullName>
    <label>Match Confidence Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>AI-generated confidence score for the emissions factor match. Range: 0.00-1.00 (0.00-0.50 = Low, 0.51-0.75 = Medium, 0.76-1.00 = High)</description>
    <inlineHelpText>Confidence score indicating how certain the AI is about this match. Higher scores indicate more reliable matches.</inlineHelpText>
</CustomField>