force-app/main/default/objects/Scope3PcmtItem/fields/Match_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Match_Reasoning__c</fullName>
    <label>Match Reasoning</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Explanation of why this emissions factor was selected, including references to specific NAICS definition sections and spending category analysis.</description>
    <inlineHelpText>AI-generated explanation of the matching decision, including which NAICS code was selected and why.</inlineHelpText>
</CustomField>