force-app/main/default/objects/Scope3PcmtItem/fields/Match_Source__c.field-meta.xml
<CustomField>
    <fullName>Match_Source__c</fullName>
    <label>Match Source</label>
    <type>Picklist</type>
    <valueSet>
        <restrictedPicklist>true</restrictedPicklist>
        <valueSetDefinition>
            <value>
                <fullName>AI Suggested</fullName>
                <default>true</default>
                <label>AI Suggested</label>
            </value>
            <value>
                <fullName>User Override</fullName>
            </value>
            <value>
                <fullName>Manual Selection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Indicates how the emissions factor match was determined - by AI suggestion, user override, or manual selection.</description>
    <inlineHelpText>How this match was created: AI Suggested (automatic), User Override (user corrected AI suggestion), or Manual Selection (user selected without AI).</inlineHelpText>
</CustomField>