force-app/main/default/objects/Scope3PcmtItem/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
                <default>true</default>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Status of manual review for items needing review after bulk matching. Pending Review = needs review, Reviewed = user has reviewed and accepted/rejected, Skipped = user skipped this item.</description>
    <inlineHelpText>Track your review progress: Pending Review (needs your attention), Reviewed (you've completed review), Skipped (you've skipped this item).</inlineHelpText>
</CustomField>